--- a/newcss/style.css
+++ b/newcss/style.css
@@ -90,7 +90,17 @@ p {
   font-style: normal;
 }
 
-
+@font-face {
+    font-family: 'ProximaNova-Extrabld';
+    src: url('../fonts/ProximaNova-Extrabld.eot');
+    src: url('../fonts/ProximaNova-Extrabld.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/../fonts/ProximaNova-Extrabld.svg#ProximaNova-Extrabld') format('svg'),
+         url('../fonts/ProximaNova-Extrabld.ttf') format('truetype'),
+         url('../fonts/ProximaNova-Extrabld.woff') format('woff'),
+         url('../fonts/ProximaNova-Extrabld.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
 
   
 .video-btn {
@@ -1603,7 +1613,7 @@ h4.wow.fadeInUp.secure:after {
 
 
 @media(max-width: 768px){
-
+    
     .floore-right h4 {
         font-size: 28px;
     }
