about us page responsive changes

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -341,6 +341,10 @@ h2.h1.we-come.wow.fadeInUp.text-center.aboutus1.animated {
 
 
 @media (max-width:767px) {
+    .about-us1 {
+        font-size: 35px !important;
+
+    }
     .pad {
     padding: 50px 0 77px !important;
 }
@@ -420,15 +424,8 @@ h2.h1.we-come.wow.fadeInUp.text-center.aboutus1.animated {
 
 /* About Us page */
 
-.about-us {
-    position: absolute !important;
-    top: 205px !important;
-    width: 60% !important;
-}
 
-.banner_inner {
-    height: 70vh !important;
-}
+
 .col-md-5.pr-0.pad-r {
     padding-right: 15px !important;
 }
