--- a/css/about.css
+++ b/css/about.css
@@ -81,23 +81,9 @@ p {
     background-attachment: fixed;
         background-size: cover !important;
     position: relative;
-    height: 80vh;
 }
 
-.about-us {
-    /*position: absolute;*/
-    /*top: 325px;*/
-    /*width: 30%;*/
-    /*left:38%;*/
-    
-    position: absolute;
-    top: 250px;
-    /* width: 61%; */
-    left: 21%;
-    /* display: flex; */
-    /* margin: 0 auto; */
-    /* justify-content: center;*/
-}
+
 
 .about-us1 {color: #fff;
     font-weight: bold;
@@ -105,57 +91,70 @@ p {
     text-align: center;
     /* margin: 0 auto; */
     /* display: flex;*/}
-
+.about-us{
+    padding-top: 120px;
+    padding-bottom: 50px;
+}
 .about-us-p {    color: #fff;
     margin-top: 29px;
     font-weight: 600;
     text-align: center;
     font-size: 20px;}
-
-.about-us:after {
-    position: absolute;
-    width: 530px;
-    height: 10px;
-    /* background: red; */
-    display: block;
-    content: "";
-    left: 16%;
-    /* bottom: 20px; */
-    top: 75px;
-    background: rgb(255,255,255);
-    background: linear-gradient(135deg, rgba(255,255,255,1) 50%, rgba(56,192,240,1) 50%);
-}
+    .about-us h1{
+        position: relative;
+        padding-bottom: 20px;
+    }
+    .about-us h1:after {
+        position: absolute;
+        width: 50%;
+        height: 10px;
+        display: block;
+        content: "";
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 0px;
+        background: rgb(255,255,255);
+        background: linear-gradient(135deg, rgba(255,255,255,1) 50%, rgba(56,192,240,1) 50%);
+    }
 
 .about-sec{position: relative;}
-
+.about-sec h1{
+    position: relative;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    display: inline-block;
+}
 .about-sec h1:after {
         position: absolute;
-    width: 147px;
+    width: 70%;
     left: 0;
-    /* right: 64px; */
     height: 7px;
-    /* background: red; */
     display: block;
-    top: 50px;
+    bottom: 0px;
     text-align: center;
     content: "";
-    /* margin: 0 auto; */
-    /* background: rgb(56,192,240); */
-    /* background: linear-gradient(90deg, rgba(56,192,240,1) 50%, rgba(19,40,76,1) 50%); */
     background: rgb(19,40,76);
     background: linear-gradient(135deg, rgba(255,255,255,1) 50%, rgba(56,192,240,1) 50%);
 }
-.leader{padding: 35px 35px 68px; height:400px;background-color: #030a16;
-    background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);}
+.leader {
+    padding: 35px 35px 68px;
+    height: 100%;
+    background-color: #030a16;
+    background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
+}
 .leadership{margin-top: 0px; color:#1d9dd8;}
 
-.bg-blue{    background-color: #030a16;
+.bg-blue {
+    background-color: #030a16;
     background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
-padding: 35px 35px 68px;
-height: 437px;}
-
+    padding: 30px;
+}
+.single-img{
+    height: 100%;
+}
 .single-img img {
-    height: 437px;
+    height: 100% !important;
+    object-fit: cover;
 }
 
 .outus{color:#fff;}
@@ -194,7 +193,6 @@ h2.leadership:after {
     background-image: url(https://www.transparenttextures.com/patterns/ag-square.png);
     padding: 20px;
     width: 100%;
-    height: 255px;
     border-right: 3px solid #10387d;
     border-bottom: 3px solid #1d9dd8;
 }
@@ -224,17 +222,19 @@ h2.leadership:after {
 .ash {
     font-size: 33px;
 }
-
+h1.h1.ash{
+    position: relative;
+    padding-bottom: 10px;
+}
 
 h1.h1.ash.text-left:after {
     position: absolute;
-    width: 147px;
+    width: 70%;
     height: 7px;
-    /* background: red; */
     display: block;
     content: "";
-    left: 9%;
-    top: 75px;
+    bottom: 0px;
+    left: 0px;
     background: rgb(255,255,255);
     background: linear-gradient(135deg, rgba(255,255,255,1) 50%, rgba(56,192,240,1) 50%);
 }
