--- a/css/solution.css
+++ b/css/solution.css
@@ -75,14 +75,18 @@ p {
 
 
 
-
-.banner_inner{
-
-    background: url(../images/about-bn1.jpg) no-repeat center;
-    background-attachment: fixed;
-        background-size: cover !important;
-    position: relative;
-    height: 80vh;
+.banner_inner {
+  background: url(../images/about-bn1.jpg) no-repeat center;
+  background-attachment: fixed;
+  background-size: cover !important;
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .about-us {
@@ -103,28 +107,28 @@ p {
 .our-solution-h1 {
     color: #fff;
     /* text-align: center; */
-    position: absolute;
-    top: 201px;
-    left: 31%;
     font-size: 50px;
     font-weight: bold;
+    position: relative;
+    padding-bottom: 20px;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 
 h1.our-solution-h1:after {
    
     position: absolute;
-    width: 465px;
+    width: 60%;
     height: 10px;
-    /* background: red; */
     display: block;
     content: "";
-    left: 0%;
-    /* display: flex; */
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     margin: 0 auto;
     text-align: center;
-    /* bottom: 20px; */
-    top: 75px;
     background: rgb(255,255,255);
     background: linear-gradient(135deg, rgba(255,255,255,1) 50%, rgba(56,192,240,1) 50%);
 }
@@ -206,9 +210,10 @@ h2.leadership:after {
 .single-img{
   height: 100%;
 }
-.single-img img{
+.single-img img {
   height: 100% !important;
   object-fit: cover;
+  width: 100% !important;
 }
 .box-solution:before{
   content: '';
@@ -447,7 +452,7 @@ background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
   position: absolute;
   top: 0;
   left: 0;
-  width: 95%;
+  width: calc(100% - 30px);
   height: 100%;
   background: rgba(0, 0, 0, 0);
   transition: background 0.5s ease;
@@ -478,11 +483,12 @@ background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
   top: 90px;
 }
 
-.button {
+.button.solution-btn {
       position: absolute;
     width: 100%;
-    left: 0px;
-    top: 238px;
+    left: 50%;
+    top: 50% !important;
+    transform: translate3d(-50%,-50%,0);
   text-align: center;
   opacity: 0;
   transition: opacity .35s ease;
@@ -501,12 +507,8 @@ background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
   opacity: 1;
 }
 .about-us-p {
-    position: absolute;
-    color: #fff;
-    /* margin-top: 29px; */
-    font-weight: 600;
-    text-align: center;
-    font-size: 20px;
-    top: 310px;
-    left: 30%;
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  font-size: 20px;
 }
