--- a/css/camview.css
+++ b/css/camview.css
@@ -68,7 +68,7 @@ p {
 
 .banner_inner{
 
-    background: url(../images/cam-bn.png) no-repeat center;
+    background: url(../images/trust-bn.png) no-repeat center;
     background-attachment: fixed;
         background-size: cover !important;
     position: relative;
@@ -77,7 +77,7 @@ p {
 
 
 section.banner_inner:after {
-    background-image: url(../images/cam.png);
+    background-image: url(../images/trust.png);
     content: "";
     background-repeat: no-repeat;
     position: absolute;
@@ -342,10 +342,19 @@ p.border1:after {
 
 .color-inherit{background:inherit;}
 
-.credible{color:#1d9dd8;font-size: 24px;}
+.credible {
+    color: #1d9dd8;
+    font-size: 24px;
+    position: relative;
+    padding-bottom: 10px;
+}
 .credible1{color:#1d9dd8;font-size: 24px;}
 
-.Basis{color:#212121; margin-top: 20px;}
+.Basis {
+    color: #212121;
+    margin-top: 20px;
+    word-break: break-word;
+}
 
 span.ff {
     float: left;
@@ -355,7 +364,7 @@ span.ff {
 .reliable {
     width: 90%;
     position: relative;
-    margin-left: 54px;
+    padding-left: 54px;
 }
 
 span.ff img {
@@ -364,11 +373,11 @@ span.ff img {
 
 h3.credible:after {
     position: absolute;
-    width: 154px;
+    width: 150px;
     left: 0;
     height: 4px;
     display: block;
-    top: 32px;
+    bottom: 0px;
     text-align: center;
     content: "";
     background: rgb(19,40,76);
@@ -408,5 +417,3 @@ h3.credible1:after {
 
 .BENEFITS{color: #fff;
     padding: 11px 0; }
-    
-
