--- a/css/guardview.css
+++ b/css/guardview.css
@@ -68,7 +68,7 @@ p {
 
 .banner_inner{
 
-    background: url(../images/guard-bn.png) no-repeat center;
+    background: url(../images/trust-bn.png) no-repeat center;
     background-attachment: fixed;
         background-size: cover !important;
     position: relative;
@@ -77,7 +77,7 @@ p {
 
 
 section.banner_inner:after {
-    background-image: url(../images/gaurdview.png);
+    background-image: url(../images/trust.png);
     content: "";
     background-repeat: no-repeat;
     position: absolute;
@@ -207,7 +207,7 @@ section.org-bg:before {
     height: 0;
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
-    border-top: 30px solid #ffffff;
+    border-top: 30px solid #1d9dd8;
     clear: both;
     /* bottom: 186px; */
 }
@@ -286,7 +286,10 @@ p.border1 {
     border-left: 2px solid #1d9dd8;
     border-right: 2px solid #fff;
     font-size: 25px;
+    position: relative;
 }
+
+
 
 p.border1:after {
     content: '';
@@ -302,26 +305,56 @@ p.border1:after {
     bottom: 49px;
 }
 
+p.border1:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid #1d9dd8;
+    clear: both;
+    bottom: -15px;
+    margin: 0 auto;
+}
+
+
+
+
 .Operators{color:#1d9dd8;}
 .Candidates{margin-top:10px;}
 
 
-.banner_inner1{
+/*.banner_inner1{*/
 
-    background: url(../images/BANNER-g.png) no-repeat center;
-        background-size: cover !important;
-    position: relative;
-    height: 100vh;
-}
+/*    background: url(../images/banners-05.png) no-repeat center;*/
+/*        background-size: cover !important;*/
+/*    position: relative;*/
+/*    height: 100vh;*/
+/*}*/
 
 .blueBg1 {
     width: 100%;
     /*height: 100vh;*/
 }
-.credible{color:#1d9dd8;font-size: 22px;}
-.credible1{color:#1d9dd8;font-size: 22px;}
 
-.Basis{color:#212121; margin-top: 20px;}
+.color-inherit{background:inherit;}
+
+.credible {
+    color: #1d9dd8;
+    font-size: 24px;
+    position: relative;
+    padding-bottom: 10px;
+}
+.credible1{color:#1d9dd8;font-size: 24px;}
+
+.Basis {
+    color: #212121;
+    margin-top: 20px;
+    word-break: break-word;
+}
 
 span.ff {
     float: left;
@@ -331,7 +364,7 @@ span.ff {
 .reliable {
     width: 90%;
     position: relative;
-    margin-left: 54px;
+    padding-left: 54px;
 }
 
 span.ff img {
@@ -340,11 +373,11 @@ span.ff img {
 
 h3.credible:after {
     position: absolute;
-    width: 154px;
+    width: 150px;
     left: 0;
     height: 4px;
     display: block;
-    top: 32px;
+    bottom: 0px;
     text-align: center;
     content: "";
     background: rgb(19,40,76);
