--- a/css/contactus.css
+++ b/css/contactus.css
@@ -64,15 +64,18 @@ p {
 
 
 
-.banner_inner{
-
-	background: url(../images/about-bn.jpg) no-repeat center;
+.banner_inner {
+    background: url(../images/about-bn.jpg) no-repeat center;
     background-attachment: fixed;
-        background-size: cover !important;
+    background-size: cover !important;
     position: relative;
-    height: 80vh;
+    min-height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 50px;
 }
-
 .about-us {
     /*position: absolute;*/
     /*top: 325px;*/
@@ -183,7 +186,7 @@ h2.leadership:after {
     background-image: url(https://www.transparenttextures.com/patterns/ag-square.png);
     padding: 20px;
     width: 100%;
-    height: 255px;
+    height: 100%;
     border-right: 3px solid #10387d;
     border-bottom: 3px solid #1d9dd8;
 }
