--- a/css/solution.css
+++ b/css/solution.css
@@ -19,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
-  
+
     /*font-family: 'ProximaNova-Black';*/
     font-family: 'ProximaNovaA-Thin';
     font-weight: 600;
@@ -75,6 +75,7 @@ p {
 
 
 
+
 .banner_inner {
   background: url(../images/about-bn1.jpg) no-repeat center;
   background-attachment: fixed;
@@ -88,45 +89,54 @@ p {
   justify-content: center;
   text-align: center;
 }
+.banner_inner_covid{
 
+    background: url(../images/covidready.png) no-repeat center;
+    background-attachment: fixed;
+        /* background-size: cover !important;
+    position: relative;
+    height: 80vh; */
+    background-size: cover !important;
+    position: relative;
+    padding-top: 100px;
+    padding-bottom: 50px;
+    min-height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 .about-us {
     position: absolute;
     top: 50%;
     width: 80%;
 }
 
-/*.our-solution-h1 {color: #fff;*/
-/*    text-align: center;*/
-/*    position: relative;*/
-/*    top: 334px;*/
-/*        font-size: 70px;*/
-/*    font-weight: bold;*/
-/*}*/
-
-
 .our-solution-h1 {
-    color: #fff;
-    /* text-align: center; */
-    font-size: 50px;
-    font-weight: bold;
-    position: relative;
-    padding-bottom: 20px;
-    display: inline-block;
-    text-align: center;
-    margin-bottom: 20px;
+   color: #fff;
+   font-size: 50px;
+   font-weight: bold;
+   position: relative;
+   padding-bottom: 20px;
+   display: inline-block;
+   text-align: center;
+   margin-bottom: 20px;
 }
 
 
+
 h1.our-solution-h1:after {
-   
+
     position: absolute;
     width: 60%;
     height: 10px;
+    /* background: red; */
     display: block;
     content: "";
     bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+     left: 50%;
+     transform: translateX(-50%);
+    /* display: flex; */
     margin: 0 auto;
     text-align: center;
     background: rgb(255,255,255);
@@ -199,7 +209,7 @@ h2.leadership:after {
 
 .box-solution {
     position: relative;
-  
+
     width: 100%;
     height: 100%;
     /* background: #111845a6; */
@@ -213,10 +223,9 @@ h2.leadership:after {
 .single-img{
   height: 100%;
 }
-.single-img img {
+.single-img img{
   height: 100% !important;
   object-fit: cover;
-  width: 100% !important;
 }
 .box-solution:before{
   content: '';
@@ -246,7 +255,7 @@ h2.leadership:after {
   padding:20px;
   text-align:center;
   box-shadow: 0 5px 10px rgba(9,0,0,0.5);
-  
+
 }
 
 .box-solution span{
@@ -257,40 +266,56 @@ h2.leadership:after {
   height: 100%;
   display: block;
   box-sizing: border-box;
-  
+
 }
 
-.box-solution span:nth-child(1)
+.box-solution span:nth-child(1):before
 {
-  transform:rotate(0deg);
+  animation: animateX 4s linear infinite;
+  top: 0;
+  width:100%;
+  height: 4px;
 }
 
-.box-solution span:nth-child(2)
+.box-solution span:nth-child(2):before
 {
-  transform:rotate(90deg);
+  left: 0;
+  width:4px;
+  height: 100%;
+  animation: animateY 4s linear infinite;
 }
 
-.box-solution span:nth-child(3)
+.box-solution span:nth-child(3):before
 {
-  transform:rotate(180deg);
+  right: 0;
+  width:4px;
+  height: 100%;
+  animation: animateY 4s linear infinite;
 }
 
-.box-solution span:nth-child(4)
+.box-solution span:nth-child(4):before
 {
-  transform:rotate(270deg);
+  bottom: 0;
+  width:100%;
+  height: 4px;
+  animation: animateX 4s linear infinite;
+  transform: rotateY(180deg);
 }
-
+.box-solution span:nth-child(4){
+  transform: rotateY(180deg);
+}
+.box-solution span:nth-child(2){
+  transform: rotateX(180deg);
+}
 .box-solution span:before
 {
   content: '';
   position: absolute;
-  width:100%;
-  height: 4px;
-  background: #1d9dd8;
-  animation: animate 4s linear infinite;
+      background: #71d1ff;
+  
 }
 
-@keyframes animate {
+@keyframes animateX {
   0% {
   transform:scaleX(0);
   transform-origin: left;
@@ -298,140 +323,55 @@ h2.leadership:after {
   50%
   {
     transform:scaleX(1);
-  transform-origin: left;
+    transform-origin: left;
+  
   }
   50.1%
   {
     transform:scaleX(1);
-  transform-origin: right;
-    
+    transform-origin: right;
+
   }
-  
+
   100%
   {
     transform:scaleX(0);
-  transform-origin: right;
-    
+    transform-origin: right;
+
   }
-  
-  
-} 
 
 
+}
+
+@keyframes animateY {
+  0% {
+  transform:scaleY(0);
+  transform-origin: top;
+  }
+  50%
+  {
+    transform:scaleY(1);
+    transform-origin: top;
+  
+  }
+  50.1%
+  {
+    transform:scaleY(1);
+    transform-origin: bottom;
+
+  }
+
+  100%
+  {
+    transform:scaleY(0);
+    transform-origin: bottom;
+
+  }
+
+
+}
 /* box solution 1 */
 
-.box-solution1 {
-    position: relative;
-
-    width:100%;
-    height: 100%;
-    /* background: #111845a6; */
-    box-sizing: border-box;
-    overflow: hidden;
-    /* box-shadow: 0 20px 50px rgb(23, 32, 90); */
-    /* border: 2px solid #2a3cad; */
-    /* color: white; */
-    /* padding: 20px; */
-}
-
-.box-solution1:before{
-  content: '';
-  position:absolute;
-  top:0;
-  left:-100%;
-  width:100%;
-  height:100%;
-  background: rgba(255,255,255,0.1);
-  transition:0.5s;
-  pointer-events: none;
-}
-
-.box-solution1:hover:before{
-  left:-50%;
-  transform: skewX(-5deg);
-}
-
-
-.box-solution1 .content{
-  position:absolute;
-  top:15px;
-  left:15px;
-  right:15px;
-  bottom:15px;
-  border:1px solid #f0a591;
-  padding:20px;
-  text-align:center;
-  box-shadow: 0 5px 10px rgba(9,0,0,0.5);
-  
-}
-
-.box-solution1 span{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
-  box-sizing: border-box;
-  
-}
-
-.box-solution1 span:nth-child(1)
-{
-  transform:rotate(0deg);
-}
-
-.box-solution1 span:nth-child(2)
-{
-  transform:rotate(90deg);
-}
-
-.box-solution1 span:nth-child(3)
-{
-  transform:rotate(180deg);
-}
-
-.box-solution1 span:nth-child(4)
-{
-  transform:rotate(270deg);
-}
-
-.box-solution1 span:before
-{
-  content: '';
-  position: absolute;
-  width:100%;
-  height: 4px;
-  background: #fff;
-  animation: animate 4s linear infinite;
-}
-
-@keyframes animate {
-  0% {
-  transform:scaleX(0);
-  transform-origin: left;
-  }
-  50%
-  {
-    transform:scaleX(1);
-  transform-origin: left;
-  }
-  50.1%
-  {
-    transform:scaleX(1);
-  transform-origin: right;
-    
-  }
-  
-  100%
-  {
-    transform:scaleX(0);
-  transform-origin: right;
-    
-  }
-  
-  
-} 
 
 .gradient-color{background-color: #030a16;
 background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
@@ -455,7 +395,7 @@ background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
   position: absolute;
   top: 0;
   left: 0;
-  width: calc(100% - 30px);
+width: calc(100% - 30px);
   height: 100%;
   background: rgba(0, 0, 0, 0);
   transition: background 0.5s ease;
@@ -482,19 +422,18 @@ background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
   transition: top .5s ease;
 }
 
-.container:hover .title, .container-fluid:hover .title{
+.container:hover .title, .container-fluid:hover .title {
   top: 90px;
 }
-
 .button.solution-btn {
-      position: absolute;
-    width: 100%;
-    left: 50%;
-    top: 50% !important;
-    transform: translate3d(-50%,-50%,0);
+  position: absolute;
+  width: 100%;
+  top: 50% !important;
+  transform: translate3d(-50%,-50%,0);
   text-align: center;
   opacity: 0;
   transition: opacity .35s ease;
+  left: 50%;
 }
 
 .button a {
@@ -506,12 +445,12 @@ background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
   z-index: 1;
 }
 
-.container:hover .button, .container-fluid:hover .button{
+.container:hover .button, .container-fluid:hover .button {
   opacity: 1;
 }
 .about-us-p {
   color: #fff;
-  font-weight: 600;
-  text-align: center;
-  font-size: 20px;
+font-weight: 600;
+text-align: center;
+font-size: 20px;
 }
