--- a/newcss/style.css
+++ b/newcss/style.css
@@ -1579,7 +1579,37 @@ h4.wow.fadeInUp.secure:after {
 #cssmenu > ul > li.has-sub > a:before, #cssmenu > ul > li.has-sub > a:after{
     display: none !important;
 }
-
+.gradient-color {
+    background-color: #030a16;
+    background-image: linear-gradient(0deg, #030a16 0%, #1d9dd8 100%);
+}
+.banner-title-h1{
+    color: #fff;
+    font-size: 50px;
+    font-weight: bold;
+    position: relative;
+    padding-bottom: 20px;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.banner-title-h1:after {
+    position: absolute;
+    width: 60%;
+    height: 10px;
+    display: block;
+    content: "";
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0 auto;
+    background: rgb(255,255,255);
+    background: linear-gradient(135deg, rgba(255,255,255,1) 50%, rgba(56,192,240,1) 50%);
+}
+.banner-subtitle-p {
+    font-weight: 600;
+    font-size: 20px;
+}
 @media (max-width: 992px)
 {
     
