--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,9 @@ h1, h2, h3, h4, h5, h6 {
             transform: translateY(-100px);
             transition:all 900ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.20s;
         }
+        .profile-card .profile-content .title strong{
+            font-family: 'ProximaNova-Black';
+        }
         .profile-card:hover .title{
             opacity:1;
             transform: translateY(0);
@@ -388,7 +391,7 @@ nav.Navigation.fixed {
 }
 
 .profile-card:hover .profile-content {
-    background-color: rgba(255, 255, 255, 0.19);
+    background-color: rgb(7 23 38 / 49%);
 }
 
 .Team_top {
