--- a/css/about.css
+++ b/css/about.css
@@ -170,7 +170,8 @@ p {
 h2.leadership:after {
     position: absolute;
     width: 154px;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     height: 4px;
     display: block;
     top: 45px;
